- Fixed CSS which was causing the head to collapse when browser window is very small and Indicators running to multiple lines. - Fixed CSS which was causing the height and alignment problems in the head.
(cherry picked from commit 1e8e744b235ce3160c4b978d00d48e5ad1f11d02)

--- a/src/ui/layout/layout.scss
+++ b/src/ui/layout/layout.scss
@@ -236,7 +236,6 @@
     display: grid;
     grid-template-columns: min-content 1fr 3fr repeat(4, min-content);
     grid-column-gap: $interiorMargin;
-    min-height: 34px;
     padding: $interiorMargin $interiorMargin + 2;
 
     .l-shell__head__button {
@@ -284,13 +283,12 @@
     display: flex;
     flex-wrap: wrap;
     font-size: 11px;
-    min-height: 24px;
+    min-height: 25px;
     justify-content: flex-end;
 
     .l-shell__head--indicators-single-line & {
       flex-wrap: nowrap;
       justify-content: flex-start; // Overflow detection doesn't work with flex-end.
-      max-height: 24px;
       overflow: hidden;
 
       > *:first-child {
